added style margin-bottom to last form

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <br>
 
-      <form id="example4Form" action="index.html" method="get">
+      <form id="example4Form" action="index.html" method="get" style="margin-bottom: 10%">
         <h2>Fade Out Animation</h2>
         <input type="text" name="text" value="" id="example4">
         <input type="button" name="start" value="Start" onclick="exampleFour()">
