--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
 
     <div id="wrapper">
-      <h1 id="headline"></h1>
+      <span id="headline"></span>
       <form id="example1Form" action="index.html" method="get">
-        <h2>Placeholder Animation</h2>
+        <h2>Placeholder</h2>
         <input type="text" name="text" value="" id="example1">
         <input type="button" name="start" value="Start" onclick="exampleOne()">
         <br>
@@ -20,6 +20,7 @@
           new Typed("#example1", { <br>
           strings: ["everything is possible", "typed.js", "add everything!"], <br>
           typeSpeed: 50, <br>
+          backSpeed: 50, <br>
           attr: 'placeholder', <br>
           loop: true <br>
           });
@@ -29,7 +30,7 @@
       <br>
 
       <form id="example2Form" action="index.html" method="get">
-        <h2>Text to value Animation</h2>
+        <h2>Text to value</h2>
         <input type="text" name="text" value="" id="exampleText">
         <input type="button" name="start" value="Start" onclick="exampleTwo()">
         <br><br>
@@ -47,7 +48,7 @@
       <br>
 
       <form id="example3Form" action="index.html" method="get">
-        <h2>Shuffle Animation</h2>
+        <h2>Shuffle</h2>
         <input type="text" name="text" value="" id="example3">
         <input type="button" name="start" value="Start" onclick="exampleThree()">
         <br>
@@ -55,6 +56,7 @@
           new Typed("#example3", { <br>
           strings: ["create something unique", "use typed.js", "be creative"], <br>
           typeSpeed: 50, <br>
+          backSpeed: 50, <br>
           attr: 'value', <br>
           shuffle: true, <br>
           loop: true <br>
@@ -65,17 +67,18 @@
       <br>
 
       <form id="example4Form" action="index.html" method="get" style="margin-bottom: 10%">
-        <h2>Fade Out Animation</h2>
+        <h2>Fade Out</h2>
         <input type="text" name="text" value="" id="example4">
         <input type="button" name="start" value="Start" onclick="exampleFour()">
         <br>
         <div class="code">
           new Typed("#example4", { <br>
-          strings: ["wow, that's amazing", "cool company", "try out something new"], <br>
-          typeSpeed: 50, <br>
-          attr: 'value', <br>
-          loop: true, <br>
-          fadeOut: true <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;strings: ["wow, that's amazing", "Try it out!", "try out something new"], <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;typeSpeed: 50, <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;backSpeed: 50, <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;attr: 'value', <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;loop: true, <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;fadeOut: true <br>
           });
         </div>
       </form>
